@@ -392,6 +392,7 @@ void bind_torrent_handle()
         .def("name", _(&torrent_handle::name))
         .def("set_upload_mode", _(&torrent_handle::set_upload_mode))
         .def("set_share_mode", _(&torrent_handle::set_share_mode))
+        .def("flush_cache", &torrent_handle::flush_cache)
         .def("set_upload_limit", _(&torrent_handle::set_upload_limit))
         .def("upload_limit", _(&torrent_handle::upload_limit))
         .def("set_download_limit", _(&torrent_handle::set_download_limit))
